Ability to add and remove Objective. Some simple styling of bars etc.

--- a/app/frontend/css/styles.css
+++ b/app/frontend/css/styles.css
@@ -91,7 +91,7 @@ pre code {
 /* ======= Header ======= */
 .header {
   padding: 10px 0;
-  background: #17baef;
+  background: #f60;
   color: #fff;
   position: fixed;
   width: 100%;
