--- a/app/frontend/views/admin.html
+++ b/app/frontend/views/admin.html
@@ -1,29 +1,33 @@
 <section id="admin" class="admin section offset-header">
-	<div class="container">
-		<h1>Your OKRs</h1>
-		<p>Hello {{currentUser.fullname}}!</p>
+  <div class="container">
+    <h1>Your OKRs</h1>
+    <p>Hello {{currentUser.fullname}}!</p>
     <div class="objectives-container">
-      <div class="panel panel-default">
+      <div ng-repeat="objective in objectives" class="panel panel-default">
         <!-- Default panel contents -->
         <div class="panel-heading">
-          <p>Objective</p>
+          <p>{{objective.name}}</p>
+          <p>Fulfillment</p>
           <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-              <span class="sr-only">40% Complete (success)</span>
+            <div class="progress-bar {{objective.class}} progress-bar-striped" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="style : {{objective.fulfillment}}%">
+              <span class="sr-only">{{objective.fulfillment}}% Complete (success)</span>
             </div>
           </div>
+          <button type="button" class="btn btn-success" ng-click="addKeyResult(objective)">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Key Result for the objective
+          </button>
+          <button type="button" class="btn btn-danger" ng-click="delete(objective._id)">
+            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove the objective
+          </button>
         </div>
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item">Key Result 1</li>
-          <li class="list-group-item">Key Result 2</li>
-          <li class="list-group-item">Key Result 3</li>
+          <li ng-repeat="keyResult in objective.keyResults" class="list-group-item">Key Result 1</li>
         </ul>
       </div>
-
     </div>
-    <span ng-click="create()" class="glyphicon glyphicon-plus-sign"></span>
-		<p style="color:red">{{errorMessage}}</p>
-		<p><strong>NB: $http requests are made with CSRF protection. To more, some requests needs to be logged in to get their results.</strong></p>
-	</div>
+    <button type="button" class="btn btn-success" ng-click="create()">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Key Result for the objective
+    </button>
+  </div>
 </section>
