--- a/app/frontend/views/header.html
+++ b/app/frontend/views/header.html
@@ -1,13 +1,13 @@
 
-<!-- ******HEADER****** --> 
+<!-- ******HEADER****** -->
 <div ng-controller="HeaderCtrl">
-    <header id="header" class="header">  
-        <div class="container">            
+    <header id="header" class="header">
+        <div class="container">
             <h1 class="logo pull-left">
                 <a class="scrollto" href="/">
-                    <span class="logo-title">okrs</span>
+                    <span class="logo-title">Idium OKR</span>
                 </a>
-            </h1><!--//logo-->              
+            </h1><!--//logo-->
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
                 <div class="navbar-header">
                     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
@@ -16,7 +16,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button><!--//nav-toggle-->
-                </div><!--//navbar-header-->            
+                </div><!--//navbar-header-->
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li ng-show="isSignedIn" class="nav-item"><a class="scrollto" href="/admin">Admin</a></li>
