.gitignore cleanup and removed static footer from the app

--- a/app/frontend/views/admin.html
+++ b/app/frontend/views/admin.html
@@ -26,8 +26,10 @@
         </ul>
       </div>
     </div>
+  </div>
+  <div class="container">
     <button type="button" class="btn btn-success" ng-click="create()">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Key Result for the objective
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </button>
   </div>
 </section>
