Moved to Apps Script, set up initial OAuth 2.0 - WIP

--- a/okr-app/app/frontend/views/main.html
+++ b/okr-app/app/frontend/views/main.html
@@ -3,9 +3,11 @@
         <div class="container text-center">
             <img src="/img/meanstack.svg" height="500">
             <p class="intro">Dude, your OKR app is ready !</p>
+
             <ul class="meta list-inline">
                 <li><a href="https://github.com/jbltx/generator-mean-stack" target="_blank">View on GitHub</a></li>
                 <li><a href="https://github.com/twbs/bootstrap" target="_blank">Full Documentation</a></li>
+                <li><a href="/google">Sign In with Google</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
