--- a/okr-app/app/frontend/views/main.html
+++ b/okr-app/app/frontend/views/main.html
@@ -1,33 +1,19 @@
 <!-- ******PROMO****** -->
     <section id="promo" class="promo section offset-header">
-        <div class="container text-center">
+        <div ng-hide="auth.isSignedIn" class="container text-center">
             <img src="/img/meanstack.svg" height="500">
-            <p class="intro">Dude, your OKR app is ready !</p>
+            <p class="intro">Welcome to OKR App</p>
 
             <ul class="meta list-inline">
-                <li><a href="https://github.com/jbltx/generator-mean-stack" target="_blank">View on GitHub</a></li>
-                <li><a href="https://github.com/twbs/bootstrap" target="_blank">Full Documentation</a></li>
-                <li><a href="/google">Sign In with Google</a></li>
+                <li><a href="#" ng-click="auth.login('google')">Sign In with Google</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
+        <div ng-show="auth.isSignedIn" class="container text-center">
+          <a href="/okr"><img src="/img/meanstack.svg" height="500"></a>
+            <p class="intro">Go to your OKRs</p>
+
+          <ul class="meta list-inline">
+            <li><a href="#" ng-click="auth.login('google')">Sign In with Google</a></li>
+          </ul><!--//meta-->
+        </div><!--//container-->
     </section><!--//promo-->
-
-    <!-- ******ABOUT****** -->
-    <section id="about" class="about section">
-        <div class="container">
-            <h2 class="title text-center">So, what next ?</h2>
-            <p class="intro text-center">Welcome to your mean-stack application. Are you a Javascript lover ? So you are at the right place. MEAN is for MongoDB, ExpressJS, AngularJS, and NodeJS, which means you can write Javascript code on each side of the project (backend - frontend).</p>
-        </div><!--//container-->
-    </section><!--//about-->
-
-
-    <!-- ******CONTACT****** -->
-    <section id="contact" class="contact section has-pattern">
-        <div class="container">
-            <div class="contact-inner">
-                <h2 class="title  text-center">Stay tuned</h2>
-                <p class="intro  text-center">I hope this generator will help you in your work. <br />Feel free to get in touch if you have any questions or suggestions.</p>
-
-            </div><!--//contact-inner-->
-        </div><!--//container-->
-    </section><!--//contact-->
